# graphics-shapes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: test_serde.rs
src/: circle.rs  coord.rs  ellipse.rs  general_math.rs  lerp.rs  lib.rs  line.rs  polygon.rs  rect.rs  shape_box.rs  triangle.rs
src/contains/: circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rect.rs  triangle.rs
src/intersection/: circle.rs  ellipse.rs  line.rs  mod.rs  polygon.rs  rect.rs  shared.rs  triangle.rs
