[package]
name = "graphics-shapes"
version = "0.2.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Shapes for graphics"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/graphics-shapes"
readme = "README.md"
keywords = ["shapes", "simple", "graphics"]
categories = ["math", "graphics"]

[features]
mint = ["dep:mint"]
serde = ["dep:serde"]

[dependencies]
mint = { version = "0.5.9", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
fnv = "1.0.3"