[package]
name = "graphics_shapes"
version = "0.4.0"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Shapes for graphics"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/graphics_shapes"
readme = "README.md"
keywords = ["shapes", "simple", "graphics"]
categories = ["mathematics", "graphics"]

[features]
default = ["serde"]
mint = ["dep:mint"]
serde = ["dep:serde"]

[dependencies]
mint = { version = "0.5.9", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
fnv = "1.0.7"

[dev-dependencies]
serde_json = "1.0.114"